Store mobile offloaded bytes on mobile reward shares directly
