# api/app/blueprints/relay/api/helium/l2/mobile_reward_share_blueprint.rb
@@ -12,14 +12,14 @@ module Relay
             field :formatted_dc_transfer_reward
             field :poc_reward
             field :formatted_poc_reward
-            field :offloaded_data_gbs
+            field :offloaded_bytes
           end
 
           class GatewayRewardDetailBlueprint < Blueprinter::Base
             field :hotspot_key
             field :dc_transfer_reward
             field :formatted_dc_transfer_reward
-            field :offloaded_data_gbs
+            field :offloaded_bytes
           end
 
           class SubscriberRewardDetailBlueprint < Blueprinter::Base
